# Yggdrasil

./: .env.example  .gitignore  .mcp.json.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: CHROMA_CLOUD.md  CHROMA_QUOTAS.md  ONNX.md  PATH_BASED_ROUTING.md  TOOLS_REFERENCE.md
src/: __init__.py  server.py
src/config/: __init__.py  chroma_client.py  request_context.py  settings.py
src/services/: __init__.py  memory_service.py
src/utils/: __init__.py  time_parser.py
